[package]
name = "dredge"
version = "0.1.0"
description = "A utility for inspecting disk usage in directory trees."
license = "GPL-3.0"
authors = ["Michael Dunsmuir <mjdunsmuir@gmail.com>"]
homepage = "https://github.com/mdunsmuir/dredge"
publish = false
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
rustbox = "*"
clap = { version = "2", features = ["unstable"] }
